M  ../../assets/scss/custom.scss M  config.yaml M  menus.yaml M  ../../content/authors/john-s.-allen/_index.md M  ../../content/authors/joseph-j.-brown/_index.md D  ../../content/event/_index.md D  ../../content/event/example/featured.jpg D  ../../content/event/example/index.md A  ../../content/home/mission.md M  ../../content/home/team.md D  ../../content/post/20-12-01-wowchemy-prize/featured.jpg D  ../../content/post/20-12-01-wowchemy-prize/index.md D  ../../content/post/20-12-02-ICML-best-paper/featured.jpg D  ../../content/post/20-12-02-ICML-best-paper/index.md A  ../../content/post/22-02-02-senate-member/index.md M  ../../content/post/_index.md A  ../../layouts/index.rss.xml A  ../../layouts/maintenance/list.html A  ../../layouts/partials/book_layout.html A  ../../layouts/partials/hooks/footer.html A  ../../layouts/partials/maintenance-pages-table.html A  ../../layouts/partials/page_author.html A  ../../layouts/partials/site_footer.html A  ../../layouts/shortcodes/asciicast.html A  ../../layouts/shortcodes/chroma-lexers.html A  ../../layouts/shortcodes/code.html A  ../../layouts/shortcodes/datatable-filtered.html A  ../../layouts/shortcodes/datatable.html A  ../../layouts/shortcodes/directoryindex.html A  ../../layouts/shortcodes/docfile.html A  ../../layouts/shortcodes/exfile.html A  ../../layouts/shortcodes/exfm.html A  ../../layouts/shortcodes/gallery-enhance.html A  ../../layouts/shortcodes/gh.html A  ../../layouts/shortcodes/ghrepo.html A  ../../layouts/shortcodes/imgproc.html A  ../../layouts/shortcodes/nohighlight.html A  ../../layouts/shortcodes/note.html A  ../../layouts/shortcodes/output.html A  ../../layouts/shortcodes/readfile.html A  ../../layouts/shortcodes/tip.html A  ../../layouts/shortcodes/todo.html A  ../../layouts/shortcodes/warning.html A  ../../layouts/shortcodes/youtube-enhance.html

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -22,6 +22,20 @@
 
 .dropdown-menu,
 nav#navbar-main li.nav-item {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
+}
+
+.navbar {
+    height: 90px;
+}
+
+.navbar-brand img {
+    width: auto;
+    height: -moz-available;
+    height: -webkit-fill-available;
+    height: -webkit-stretch;
+    height: stretch;
+    max-height: 70px; // For lg+ responsive sizing. 60px height +10px v-padding = 70px
+    max-width: fit-content; // Must override default responsive image style.
 }
